--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: 18
           cache: pnpm # 设置缓存
       - name: Setup Pages
-        uses: actions/configure-pages@v3  # 在工作流程自动配置GithubPages
+        uses: actions/configure-pages@v4  # 从 v3 升级到 v4
       - name: Install dependencies
         run: pnpm install # 安装依赖
       - name: Build with VitePress
@@ -43,7 +43,7 @@ jobs:
           pnpm run docs:build # 启动项目
           touch .nojekyll  # 通知githubpages不要使用Jekyll处理这个站点，不知道为啥不生效，就手动搞了
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2  # 上传构建产物
+        uses: actions/upload-pages-artifact@v3  # 从 v2 升级到 v3
         with:
           path: .vitepress/dist # 指定上传的路径，当前是根目录，如果是docs需要加docs/的前缀
 
